# CV-CUDA

./: .buildinfo  .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  LICENSE.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  bestpractices.html  genindex.html  getting_started.html  index.html  init_repo.sh  installation.html  nvcvobjectcache.html  objects.inv  perf_benchmark.html  prerequisites.html  print_env.sh  python.html  samples.html  search.html  searchindex.js
bench/: BenchAdaptiveThreshold.cpp  BenchAdvCvtColor.cpp  BenchAverageBlur.cpp  BenchBilateralFilter.cpp  BenchBndBox.cpp  BenchBoxBlur.cpp  BenchBrightnessContrast.cpp  BenchCenterCrop.cpp  BenchChannelReorder.cpp  BenchColorTwist.cpp  BenchComposite.cpp  BenchConv2D.cpp  BenchConvertTo.cpp  BenchCopyMakeBorder.cpp  BenchCropFlipNormalizeReformat.cpp  BenchCustomCrop.cpp  BenchCvtColor.cpp  BenchErase.cpp  BenchFindContours.cpp  BenchFindHomography.cpp  BenchFlip.cpp  BenchGammaContrast.cpp  BenchGaussian.cpp  BenchGaussianNoise.cpp  BenchHQResize.cpp  BenchHistogram.cpp  BenchHistogramEq.cpp  BenchInpaint.cpp  BenchJointBilateralFilter.cpp  BenchLabel.cpp  BenchLaplacian.cpp  BenchMedianBlur.cpp  BenchMinAreaRect.cpp  BenchMinMaxLoc.cpp  BenchMinMaxLoc.hpp  BenchMorphology.cpp  BenchNMS.cpp  BenchNormalize.cpp  BenchOSD.cpp  BenchPadAndStack.cpp  (+16 more)
bench/python/: README.md  bench_utils.py  run_bench.py
docs/: CMakeLists.txt  Doxyfile.in
docs/design/: .gitignore  .vimrc  Makefile  allocator_classes.puml  image_classes.puml  image_data_classes.puml  image_data_future_classes.puml  image_future_classes.puml  resource_allocator_classes.puml
docs/sphinx/: conf.py  gen_py_doc_rsts.py  generate_groups.py  getting_started.rst  index.rst  installation.rst  nvcvobjectcache.rst  pkg_scripts.js  prerequisites.rst  samples.rst
python/: .exrc  CMakeLists.txt  __init__.py.in  _load_binding.py.in  build_wheels.sh  setup.py.in
python/common/: Assert.cpp  Assert.hpp  CMakeLists.txt  CheckError.cpp  CheckError.hpp  Hash.hpp  PyUtil.cpp  PyUtil.hpp  String.cpp  String.hpp
python/cpack/: debian_python_postinst.in  debian_python_prerm.in
python/mod_cvcuda/: AdaptiveThresholdType.cpp  AdaptiveThresholdType.hpp  BorderType.cpp  BorderType.hpp  CMakeLists.txt  ChannelManipType.cpp  ChannelManipType.hpp  ColorConversionCode.cpp  ColorConversionCode.hpp  ConnectivityType.cpp  ConnectivityType.hpp  CvtColorUtil.cpp  CvtColorUtil.hpp  InterpolationType.cpp  InterpolationType.hpp  LabelType.cpp  LabelType.hpp  Main.cpp  MorphologyType.cpp  MorphologyType.hpp  NormType.cpp  NormType.hpp  OpAdaptiveThreshold.cpp  OpAdvCvtColor.cpp  OpAverageBlur.cpp  OpBilateralFilter.cpp  OpBndBox.cpp  OpBoxBlur.cpp  OpBrightnessContrast.cpp  OpCenterCrop.cpp  OpChannelReorder.cpp  OpColorTwist.cpp  OpComposite.cpp  OpConv2D.cpp  OpConvertTo.cpp  OpCopyMakeBorder.cpp  OpCropFlipNormalizeReformat.cpp  OpCustomCrop.cpp  OpCvtColor.cpp  OpErase.cpp  (+48 more)
python/mod_nvcv/: Array.cpp  Array.hpp  CAPI.cpp  CAPI.hpp  CMakeLists.txt  Cache.cpp  Cache.hpp  CastUtils.hpp  ColorSpec.cpp  ColorSpec.hpp  Container.cpp  Container.hpp  CudaBuffer.cpp  CudaBuffer.hpp  DLPackUtils.cpp  DLPackUtils.hpp  DataType.cpp  DataType.hpp  Definitions.hpp  ExternalBuffer.cpp  ExternalBuffer.hpp  Image.cpp  Image.hpp  ImageBatch.cpp  ImageBatch.hpp  ImageFormat.cpp  ImageFormat.hpp  Main.cpp  Object.cpp  Object.hpp  Rect.cpp  Rect.hpp  Resource.cpp  Resource.hpp  Size.hpp  Stream.cpp  Stream.hpp  StreamStack.cpp  StreamStack.hpp  Tensor.cpp  (+8 more)
samples/: CMakeLists.txt  ConfigTensorRT.cmake  NOTICE.md  README.md  cpp_samples.html  hello_world.html  python_samples.html
samples/classification/: CMakeLists.txt  ClassificationUtils.hpp  Main.cpp
samples/common/: CMakeLists.txt  NvDecoder.cpp  NvDecoder.h  TRTUtils.cpp  TRTUtils.h  TestUtils.h
samples/cpp_samples/: cropresize.html
samples/cropandresize/: CMakeLists.txt  Main.cpp
samples/python_samples/: classification.html  object_detection.html  segmentation.html  segmentation_triton.html
samples/scripts/: README.md  benchmark.py  benchmark_samples.sh  build_samples.sh  export_resnet.py  install_dependencies.sh  requirements.txt  run_samples.sh  serialize_models.sh
samples/segmentation_triton/: README.md
src/cvcuda/: CMakeLists.txt  OpAdaptiveThreshold.cpp  OpAdvCvtColor.cpp  OpAverageBlur.cpp  OpBilateralFilter.cpp  OpBndBox.cpp  OpBoxBlur.cpp  OpBrightnessContrast.cpp  OpCenterCrop.cpp  OpChannelReorder.cpp  OpColorTwist.cpp  OpComposite.cpp  OpConv2D.cpp  OpConvertTo.cpp  OpCopyMakeBorder.cpp  OpCropFlipNormalizeReformat.cpp  OpCustomCrop.cpp  OpCvtColor.cpp  OpErase.cpp  OpFindContours.cpp  OpFindHomography.cpp  OpFlip.cpp  OpGammaContrast.cpp  OpGaussian.cpp  OpGaussianNoise.cpp  OpHQResize.cpp  OpHistogram.cpp  OpHistogramEq.cpp  OpInpaint.cpp  OpJointBilateralFilter.cpp  OpLabel.cpp  OpLaplacian.cpp  OpMedianBlur.cpp  OpMinAreaRect.cpp  OpMinMaxLoc.cpp  OpMorphology.cpp  OpNonMaximumSuppression.cpp  OpNormalize.cpp  OpOSD.cpp  OpPadAndStack.cpp  (+14 more)
src/nvcv/: CMakeLists.txt
src/nvcv_types/: Allocator.cpp  Array.cpp  CMakeLists.txt  ColorSpec.cpp  Config.cpp  DataLayout.cpp  DataType.cpp  Image.cpp  ImageBatch.cpp  ImageFormat.cpp  Requirements.cpp  Status.cpp  Tensor.cpp  TensorBatch.cpp  TensorLayout.cpp  TensorShape.cpp  Version.cpp
src/util/: Algorithm.hpp  Assert.cpp  Assert.h  CMakeLists.txt  CheckError.cpp  CheckError.hpp  Compat.c.in  Compat.cpp  Compat.h  Compiler.hpp  Event.cpp  Event.hpp  HashMD5.cpp  HashMD5.hpp  Math.hpp  Metaprogramming.hpp  PerStreamCache.hpp  PerStreamCacheImpl.hpp  Ranges.hpp  SanitizerOptions.c  SimpleCache.hpp  Size.hpp  StaticVector.hpp  Stream.cpp  Stream.hpp  StreamId.cpp  StreamId.hpp  String.cpp  String.hpp  SymbolVersioning.hpp  TensorDataUtils.cpp  TensorDataUtils.hpp  UniqueHandle.hpp  Version.cpp  Version.hpp  compat_symbols.txt
tests/: CMakeLists.txt  Main.cpp  run_tests.sh.in  test_wheels.sh.in
tests/common/: BorderUtils.cpp  BorderUtils.hpp  HashMD5.cpp  (+16 more)
(+5950 files in other folders)
